# Acs-CashRegister

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
apps/accounts/: admin.py  forms.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/send_mail/: forms.py  urls.py  views.py
apps/tameiaki/: admin.py  apps.py  context_processor.py  export.py  filters.py  forms.py  middleware.py  models.py  resources.py  urls.py  validators.py  views.py
apps/tameiaki/migrations/: 0001_initial.py  0002_alter_cash_file.py  0002_alter_cash_register_date.py  0002_alter_customer_first_name_alter_customer_last_name.py  0003_alter_cash_status.py  0003_cash_delete_customer.py  0003_cash_file_url.py  0004_alter_cash_id.py  0004_remove_cash_file_url.py  0005_cash_aes_key.py  0005_upload.py  0006_cash_update_date.py  0006_rename_upload_uploadfile_alter_uploadfile_table.py  0007_cash_created_at_cash_updated_at.py  0007_rename_archive_uploadfile_file.py  0008_cash_document.py  0008_remove_cash_file_alter_uploadfile_file.py  0009_alter_cash_document.py  0009_alter_uploadfile_customer.py  0010_alter_cash_document.py  0010_alter_uploadfile_customer.py  0011_alter_cash_document.py  0011_alter_uploadfile_table.py  0012_rename_document_cash_file.py  (+11 more)
config/: admin.py  settings.py  urls.py
proxy/: Dockerfile  default.conf
templates/: base.html  customer.html  home.html  test.html
templates/account/: login.html  signup.html
templates/partials/: navbar.html
templates/registration/: login.html
(+11 files in other folders)
